[Review] 피드백, 인기상품 리펙토링 및 로직 수정