@@ -7,144 +7,114 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class StockServiceTest {
 
-    @InjectMocks
-    private StockService stockService;
-
     @Mock
     private StockRepository stockRepository;
 
-    @Test
-    void 재고_충분함_검증_성공() {
-        // given
-        StockCommand.Order.Item item1 = new StockCommand.Order.Item("SKU001", 5L);
-        StockCommand.Order.Item item2 = new StockCommand.Order.Item("SKU002", 3L);
-        StockCommand.Order stockCommand = new StockCommand.Order(List.of(item1, item2));
-
-        EnoughStockDTO stock1 = createEnoughStockDTO("SKU001", 10);
-        EnoughStockDTO stock2 = createEnoughStockDTO("SKU002", 5);
-
-        when(stockRepository.findSkuIdAndAvailableEa(any())).thenReturn(List.of(stock1, stock2));
-
-        // when
-        stockService.isEnoughStock(stockCommand);
-
-        // then
-        verify(stockRepository).findSkuIdAndAvailableEa(any());
-    }
+    @InjectMocks
+    private StockService stockService;
 
     @Test
-    void 동일_상품_다수_주문_재고_검증_성공() {
+    void 충분한_재고_확인_성공() {
         // given
         StockCommand.Order.Item item1 = new StockCommand.Order.Item("SKU001", 3L);
-        StockCommand.Order.Item item2 = new StockCommand.Order.Item("SKU001", 2L);
-        StockCommand.Order.Item item3 = new StockCommand.Order.Item("SKU002", 3L);
-        StockCommand.Order stockCommand = new StockCommand.Order(List.of(item1, item2, item3));
+        StockCommand.Order.Item item2 = new StockCommand.Order.Item("SKU002", 5L);
+        StockCommand.Order stockCommand = new StockCommand.Order(Arrays.asList(item1, item2));
 
-        EnoughStockDTO stock1 = createEnoughStockDTO("SKU001", 10);
-        EnoughStockDTO stock2 = createEnoughStockDTO("SKU002", 5);
+        List<String> skuIds = Arrays.asList("SKU001", "SKU002");
 
-        when(stockRepository.findSkuIdAndAvailableEa(any())).thenReturn(List.of(stock1, stock2));
+        EnoughStockDTO stock1 = createStockDTO("SKU001", 10L, 1000L);
+        EnoughStockDTO stock2 = createStockDTO("SKU002", 20L, 2000L);
+        List<EnoughStockDTO> stockList = Arrays.asList(stock1, stock2);
+
+        when(stockRepository.findSkuIdAndAvailableEa(anyList())).thenReturn(stockList);
 
         // when
-        stockService.isEnoughStock(stockCommand);
+        List<StockInfo.Stock> result = stockService.checkEaAndProductInfo(stockCommand);
 
         // then
-        verify(stockRepository).findSkuIdAndAvailableEa(any());
+        assertThat(result).hasSize(2);
+        assertThat(result.get(0).skuId()).isEqualTo("SKU001");
+        assertThat(result.get(0).ea()).isEqualTo(10L);
+        assertThat(result.get(0).unitPrice()).isEqualTo(1000L);
+
+        assertThat(result.get(1).skuId()).isEqualTo("SKU002");
+        assertThat(result.get(1).ea()).isEqualTo(20L);
+        assertThat(result.get(1).unitPrice()).isEqualTo(2000L);
+
+        verify(stockRepository, times(1)).findSkuIdAndAvailableEa(anyList());
     }
 
     @Test
-    void 재고_부족시_예외_발생() {
+    void 재고_부족_시_예외_발생() {
         // given
-        StockCommand.Order.Item item1 = new StockCommand.Order.Item("SKU001", 15L);
-        StockCommand.Order.Item item2 = new StockCommand.Order.Item("SKU002", 3L);
-        StockCommand.Order stockCommand = new StockCommand.Order(List.of(item1, item2));
-
-        EnoughStockDTO stock1 = createEnoughStockDTO("SKU001", 10);
-        EnoughStockDTO stock2 = createEnoughStockDTO("SKU002", 5);
-
-        when(stockRepository.findSkuIdAndAvailableEa(any())).thenReturn(List.of(stock1, stock2));
-
-        // when
-        Exception exception = assertThrows(RuntimeException.class, () -> stockService.isEnoughStock(stockCommand));
-
-        // then
-        assertTrue(exception.getMessage().contains("SKU: SKU001의 재고가 부족합니다"));
-        verify(stockRepository).findSkuIdAndAvailableEa(any());
-    }
-
-    @Test
-    void 존재하지_않는_상품_주문시_예외_발생() {
-        // given
-        StockCommand.Order.Item item1 = new StockCommand.Order.Item("SKU001", 5L);
-        StockCommand.Order.Item item2 = new StockCommand.Order.Item("SKU003", 3L); // SKU003 is not in stock
-        StockCommand.Order stockCommand = new StockCommand.Order(List.of(item1, item2));
-
-        EnoughStockDTO stock1 = createEnoughStockDTO("SKU001", 10);
-        EnoughStockDTO stock2 = createEnoughStockDTO("SKU002", 5);
-
-        when(stockRepository.findSkuIdAndAvailableEa(any())).thenReturn(List.of(stock1, stock2));
-
-        // when
-        Exception exception = assertThrows(RuntimeException.class, () -> stockService.isEnoughStock(stockCommand));
-
-        // then
-        assertTrue(exception.getMessage().contains("SKU: SKU003의 재고가 부족합니다"));
-        assertTrue(exception.getMessage().contains("현재재고: 0"));
-        verify(stockRepository).findSkuIdAndAvailableEa(any());
-    }
-
-    @Test
-    void 재고_감소_성공() {
-        // given
-        long orderId = 12345L;
         StockCommand.Order.Item item1 = new StockCommand.Order.Item("SKU001", 3L);
-        StockCommand.Order.Item item2 = new StockCommand.Order.Item("SKU002", 2L);
-        StockCommand.Order stockCommand = new StockCommand.Order(List.of(item1, item2));
+        StockCommand.Order.Item item2 = new StockCommand.Order.Item("SKU002", 15L); // 재고 초과
+        StockCommand.Order stockCommand = new StockCommand.Order(Arrays.asList(item1, item2));
+
+        List<String> skuIds = Arrays.asList("SKU001", "SKU002");
+
+        EnoughStockDTO stock1 = createStockDTO("SKU001", 10L, 1000L);
+        EnoughStockDTO stock2 = createStockDTO("SKU002", 10L, 2000L); // 요청 15개보다 적은 10개
+        List<EnoughStockDTO> stockList = Arrays.asList(stock1, stock2);
+
+        when(stockRepository.findSkuIdAndAvailableEa(anyList())).thenReturn(stockList);
+
+        // when
+        // then
+        assertThatThrownBy(() -> stockService.checkEaAndProductInfo(stockCommand))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessageContaining("재고 부족")
+                .hasMessageContaining("SKU002")
+                .hasMessageContaining("요청: 15개, 가용: 10개");
+
+        verify(stockRepository, times(1)).findSkuIdAndAvailableEa(anyList());
+    }
+
+    @Test
+    void 재고_감소_처리_성공() {
+        // given
+        Long orderId = 1000L;
+        StockCommand.Order.Item item1 = new StockCommand.Order.Item("SKU001", 3L);
+        StockCommand.Order.Item item2 = new StockCommand.Order.Item("SKU002", 5L);
+        StockCommand.Order stockCommand = new StockCommand.Order(Arrays.asList(item1, item2));
 
         when(stockRepository.updateStockDecreaseFifo(eq(orderId), eq("SKU001"), eq(3L))).thenReturn(3);
-        when(stockRepository.updateStockDecreaseFifo(eq(orderId), eq("SKU002"), eq(2L))).thenReturn(2);
+        when(stockRepository.updateStockDecreaseFifo(eq(orderId), eq("SKU002"), eq(5L))).thenReturn(5);
 
         // when
         int result = stockService.decreaseStock(orderId, stockCommand);
 
         // then
-        assertEquals(5, result);
-        verify(stockRepository).updateStockDecreaseFifo(orderId, "SKU001", 3L);
-        verify(stockRepository).updateStockDecreaseFifo(orderId, "SKU002", 2L);
+        assertThat(result).isEqualTo(8); // 3 + 5 = 8 (총 업데이트된 재고 수)
+        verify(stockRepository, times(1)).updateStockDecreaseFifo(eq(orderId), eq("SKU001"), eq(3L));
+        verify(stockRepository, times(1)).updateStockDecreaseFifo(eq(orderId), eq("SKU002"), eq(5L));
     }
 
     @Test
-    void 재고_일부만_감소_성공() {
+    void 재고_복원_처리_성공() {
         // given
-        long orderId = 12345L;
-        StockCommand.Order.Item item1 = new StockCommand.Order.Item("SKU001", 3L);
-        StockCommand.Order.Item item2 = new StockCommand.Order.Item("SKU002", 2L);
-        StockCommand.Order stockCommand = new StockCommand.Order(List.of(item1, item2));
-
-        when(stockRepository.updateStockDecreaseFifo(eq(orderId), eq("SKU001"), eq(3L))).thenReturn(2); // Only 2 updated
-        when(stockRepository.updateStockDecreaseFifo(eq(orderId), eq("SKU002"), eq(2L))).thenReturn(2);
+        Long orderId = 1000L;
+        doNothing().when(stockRepository).restoreStockByOrderId(orderId);
 
         // when
-        int result = stockService.decreaseStock(orderId, stockCommand);
+        stockService.restoreStock(orderId);
 
         // then
-        assertEquals(4, result); // 2 + 2 = 4
-        verify(stockRepository).updateStockDecreaseFifo(orderId, "SKU001", 3L);
-        verify(stockRepository).updateStockDecreaseFifo(orderId, "SKU002", 2L);
+        verify(stockRepository, times(1)).restoreStockByOrderId(orderId);
     }
 
-    private EnoughStockDTO createEnoughStockDTO(String skuId, long ea) {
+    private EnoughStockDTO createStockDTO(String skuId, Long ea, Long unitPrice) {
         return new EnoughStockDTO() {
             @Override
             public String getSkuId() {
@@ -154,6 +124,11 @@ class StockServiceTest {
             @Override
             public Long getEa() {
                 return ea;
+            }
+
+            @Override
+            public Long getUnitPrice() {
+                return unitPrice;
             }
         };
     }
